--- a/Clientes.ipynb
+++ b/Clientes.ipynb
@@ -6,7 +6,7 @@
       "name": "Clientes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMFfXJD44t20v8haC7mg7Xx",
+      "authorship_tag": "ABX9TyO6qDf6nou7kL1R+XgFyopx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1057,6 +1057,44 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "pELB9m5htXxP",
+        "outputId": "a68ca1fa-c262-48d2-e450-568d866659b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        }
+      },
+      "source": [
+        "base_final.loc[base_final['cambio_plan_1_si_0_no']==1].count()"
+      ],
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "nro_cliente              5847\n",
+              "Plan_mes                 5847\n",
+              "mes1                     5847\n",
+              "mes2                     5847\n",
+              "mes3                     5847\n",
+              "cambio_plan              5847\n",
+              "cambio_plan1             5847\n",
+              "cambio_plan2             5847\n",
+              "cambio_plan_1_si_0_no    5847\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 133
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "3LJulFCYZZnf",
         "outputId": "48b7e010-3c1d-4466-be29-925844487dcc",
         "colab": {
@@ -1214,158 +1252,8 @@
       "source": [
         "base_final_clientes.to_csv(\"Clientes_cambio_plan.csv\",index=False)"
       ],
-      "execution_count": 116,
+      "execution_count": 135,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LluoQhTJrDEl",
-        "outputId": "9146cbf5-b41d-4c26-db3c-fdcebf6aedb7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 402
-        }
-      },
-      "source": [
-        "base_final_clientes"
-      ],
-      "execution_count": 118,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Plan_mes</th>\n",
-              "      <th>mes</th>\n",
-              "      <th>nro_cliente</th>\n",
-              "      <th>cambio_plan_1_si_0_no</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>95729</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>96410</td>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>96400</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>95729</td>\n",
-              "      <td>1</td>\n",
-              "      <td>5</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>95420</td>\n",
-              "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>32613</th>\n",
-              "      <td>96806</td>\n",
-              "      <td>3</td>\n",
-              "      <td>10897</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>32614</th>\n",
-              "      <td>96890</td>\n",
-              "      <td>3</td>\n",
-              "      <td>10895</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>32615</th>\n",
-              "      <td>96806</td>\n",
-              "      <td>3</td>\n",
-              "      <td>10898</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>32616</th>\n",
-              "      <td>96806</td>\n",
-              "      <td>3</td>\n",
-              "      <td>10900</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>32617</th>\n",
-              "      <td>96770</td>\n",
-              "      <td>3</td>\n",
-              "      <td>10899</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>32618 rows × 4 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "       Plan_mes  mes  nro_cliente  cambio_plan_1_si_0_no\n",
-              "0         95729    1            1                      1\n",
-              "1         96410    1            3                      0\n",
-              "2         96400    1            2                      0\n",
-              "3         95729    1            5                      1\n",
-              "4         95420    1            4                      1\n",
-              "...         ...  ...          ...                    ...\n",
-              "32613     96806    3        10897                      0\n",
-              "32614     96890    3        10895                      1\n",
-              "32615     96806    3        10898                      0\n",
-              "32616     96806    3        10900                      0\n",
-              "32617     96770    3        10899                      1\n",
-              "\n",
-              "[32618 rows x 4 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 118
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -1676,7 +1564,7 @@
       "source": [
         "cambiaron_caba.to_csv(\"Cambiaron_de_plan_caba.csv\",index=False)"
       ],
-      "execution_count": 122,
+      "execution_count": 134,
       "outputs": []
     },
     {
@@ -1907,6 +1795,17 @@
           "execution_count": 124
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wHWztj8XzRP4"
+      },
+      "source": [
+        "provincua_con_mas.to_csv(\"provincia_con_mas_factu.csv\",index=False)"
+      ],
+      "execution_count": 136,
+      "outputs": []
     }
   ]
 }
